--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "start": "webpack-dev-server --config webpack.dev.js"
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.161",
         "@types/react": "^16.9.48",
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.5",
@@ -31,6 +32,7 @@
         "css-loader": "^4.2.2",
         "less": "^3.12.2",
         "less-loader": "^7.0.0",
+        "lodash": "^4.17.20",
         "react-splitter-layout": "^4.0.0",
         "style-loader": "^1.2.1",
         "styled-components": "^5.1.1",
