--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/styled-components": "^5.1.2",
 		"@types/webpack-env": "^1.15.2",
 		"copy-webpack-plugin": "^6.0.3",
+		"file-loader": "^6.1.0",
 		"html-webpack-plugin": "^4.3.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
