--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/react-splitter-layout": "^3.0.0",
 		"@types/styled-components": "^5.1.2",
 		"@types/webpack-env": "^1.15.2",
+		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^6.0.3",
 		"file-loader": "^6.1.0",
 		"html-webpack-plugin": "^4.3.0",
