--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"build": "webpack --config webpack.dev.js",
 		"build:prod": "webpack --config webpack.prod.js",
-		"start": "webpack-dev-server --config webpack.dev.js"
+		"start": "webpack serve --config webpack.dev.js"
 	},
 	"devDependencies": {
 		"@types/lodash": "^4.14.161",
@@ -17,20 +17,19 @@
 		"@types/react-router-dom": "^5.1.5",
 		"@types/react-splitter-layout": "^3.0.0",
 		"@types/styled-components": "^5.1.2",
-		"@types/webpack-env": "^1.15.2",
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^6.0.3",
 		"file-loader": "^6.1.0",
-		"html-webpack-plugin": "^4.3.0",
+		"html-webpack-plugin": "^5.0.0-beta.6",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.2.0",
 		"terser-webpack-plugin": "^4.1.0",
 		"ts-loader": "^8.0.3",
 		"typescript": "^4.0.2",
-		"webpack": "^4.44.1",
-		"webpack-cli": "^3.3.12",
-		"webpack-dev-server": "^3.11.0"
+		"webpack": "^5.19.0",
+		"webpack-cli": "^4.4.0",
+		"webpack-dev-server": "^3.11.2"
 	},
 	"dependencies": {
 		"antd": "3.26.18",
