--- a/package.json
+++ b/package.json
@@ -19,26 +19,26 @@
 		"@types/styled-components": "^5.1.2",
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^6.0.3",
+		"css-loader": "^5.0.1",
 		"file-loader": "^6.1.0",
 		"html-webpack-plugin": "^5.0.0-beta.6",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"react-router-dom": "^5.2.0",
+		"less-loader": "^7.3.0",
+		"style-loader": "^2.0.0",
 		"terser-webpack-plugin": "^4.1.0",
-		"ts-loader": "^8.0.3",
-		"typescript": "^4.0.2",
+		"ts-loader": "^8.0.14",
+		"typescript": "^4.1.3",
 		"webpack": "^5.19.0",
 		"webpack-cli": "^4.4.0",
 		"webpack-dev-server": "^3.11.2"
 	},
 	"dependencies": {
 		"antd": "3.26.18",
-		"css-loader": "^4.2.2",
-		"less": "^3.12.2",
-		"less-loader": "^7.0.0",
+		"less": "3.11.0",
 		"lodash": "^4.17.20",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"react-router-dom": "^5.2.0",
 		"react-splitter-layout": "^4.0.0",
-		"style-loader": "^1.2.1",
 		"styled-components": "^5.1.1",
 		"unstated-next": "^1.1.0"
 	}
