--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	},
 	"dependencies": {
 		"antd": "3.26.18",
+		"echarts": "^5.3.2",
 		"less": "3.11.0",
 		"lodash": "^4.17.20",
 		"react": "^17.0.1",
